add lab 3